--- a/user-client/package.json
+++ b/user-client/package.json
@@ -60,6 +60,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx}": [
       "pretty-quick --staged",
+      "eslint --fix",
       "eslint",
       "git add"
     ]
