--- a/user-client/package.json
+++ b/user-client/package.json
@@ -7,8 +7,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "formik": "^2.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -17,6 +20,7 @@
     "react-google-login": "^5.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1",
     "yup": "^0.27.0"
   },
   "scripts": {
