--- a/user-client/package.json
+++ b/user-client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
+    "react-loading-skeleton": "^1.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-toastify": "^5.4.1",
