--- a/userApi/package.json
+++ b/userApi/package.json
@@ -21,8 +21,7 @@
     "mongoose": "^5.7.13",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-google-plus-token": "^2.1.0",
+    "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
