--- a/userApi/package.json
+++ b/userApi/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.7.13",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
