dd api for login, create new admin by root account

--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -53,8 +53,9 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
-      "eslint",
       "pretty-quick --staged",
+      "eslint --fix",
+      "eslint",
       "git add"
     ]
   }
