--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.26.0",
+    "axios": "^0.19.0",
     "formik": "^2.0.6",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
@@ -14,7 +16,7 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
