--- a/admin-client/.eslintrc
+++ b/admin-client/.eslintrc
@@ -17,6 +17,7 @@
     "react/jsx-filename-extension": ["off"],
     "react/prop-types": ["off"],
     "no-return-assign": ["off"],
-    "react/jsx-props-no-spreading": ["off"]
+    "react/jsx-props-no-spreading": ["off"],
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
