--- a/user-client/package.json
+++ b/user-client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "antd": "^3.26.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "formik": "^2.0.6",
