--- a/user-client/package.json
+++ b/user-client/package.json
@@ -20,9 +20,13 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
     "react-loading-skeleton": "^1.3.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "react-toastify": "^5.4.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
   },
   "scripts": {
