--- a/user-client/package.json
+++ b/user-client/package.json
@@ -24,9 +24,12 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
+    "react-slick": "^0.25.2",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "yup": "^0.27.0"
   },
   "scripts": {
