--- a/user-client/package.json
+++ b/user-client/package.json
@@ -21,6 +21,7 @@
     "react-google-login": "^5.0.7",
     "react-loading-skeleton": "^1.3.0",
     "react-redux": "^7.1.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
