--- a/user-client/package.json
+++ b/user-client/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15",
     "slick-carousel": "^1.8.1",
     "yup": "^0.27.0"
   },
