--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "passport-facebook-token": "^3.3.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "morgan": "^1.9.1",
