--- a/user-client/package.json
+++ b/user-client/package.json
@@ -32,6 +32,7 @@
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^2.3.0",
     "yup": "^0.27.0"
   },
   "scripts": {
