--- a/user-client/package.json
+++ b/user-client/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
