--- a/user-client/package.json
+++ b/user-client/package.json
@@ -32,6 +32,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15",
+    "simplebar": "^5.1.0",
+    "simplebar-react": "^2.1.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^2.3.0",
     "yup": "^0.27.0"
