--- a/user-client/package.json
+++ b/user-client/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.1.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
+    "react-router-tabs": "^1.3.2",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
