--- a/user-client/package.json
+++ b/user-client/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
