--- a/user-client/package.json
+++ b/user-client/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
