--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "http-status-codes": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.13",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
